<?xml version="1.0" encoding="utf-8"?>
<!--
activity_quickplay.xml
BombSquad

Created by Andy Foulke on 12/2/2015
Copyright (c) 2015 Tasty Minstrel Games.  All rights reserved
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.playtmg.bombsquad.QuickPlayActivity">
	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/textCreateMission"
		android:text="@string/qp_create_mission"
		android:layout_alignParentTop="true"
		android:layout_centerHorizontal="true"
		android:textSize="30sp"/>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/textTotalMissionTime"
		android:layout_below="@id/textCreateMission"
		android:layout_alignParentLeft="true"
		android:text="@string/qp_total_mission_time"/>

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:id="@+id/textTotalTime"
		android:layout_below="@id/textTotalMissionTime"
		android:text="00:00"
		android:background="#ff000000"
		android:gravity="center_horizontal"
		android:textColor="#ffff0000"
		android:textSize="64sp"/>

	<Button
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/btnAdd"
		android:text="@string/qp_add"
		android:onClick="clickedAdd"
		android:layout_alignParentLeft="true"
		android:layout_below="@id/textTotalTime"/>

	<!--
	<Button
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/btnRemove"
		android:text="@string/qp_remove"
		android:onClick="clickedRemove"
		android:layout_toRightOf="@id/btnAdd"
		android:layout_alignBaseline="@id/btnAdd"/>
		-->

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/txtRemoveInstructions"
		android:text="@string/qp_remove_instruct"
		android:layout_toRightOf="@id/btnAdd"
		android:layout_alignBaseline="@id/btnAdd"
		android:layout_marginLeft="10dp"/>

	<ListView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:id="@+id/listBombs"
		android:layout_below="@+id/btnAdd"
		android:layout_alignParentLeft="true"/>

	<Button
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/btnStart"
		android:onClick="clickedStart"
		android:layout_alignParentBottom="true"
		android:layout_centerHorizontal="true"
		android:text="@string/cmp_start"/>
</RelativeLayout>
